--- a/Abalone.ipynb
+++ b/Abalone.ipynb
@@ -798,7 +798,7 @@
    "id": "180b6c0d",
    "metadata": {},
    "source": [
-    "* Normally distributed and left skewed"
+    "* Normally distributed and positive skewed"
    ]
   },
   {
